pkg/lang/testdata/ub/config/valid/input-conditional.ub
factory: {
  inputs: { r: if true then 3 else 1 }
}
