pkg/lang/testdata/ub/config/invalid/input-local-without-block.ub
factory: {
  inputs: { region: local.region }
}
